PEAK6/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flasksbk
  labels:
    app: hello
spec:
  ports:
  - name: http
    port: 80
    targetPort: 5000
  selector:
    app: hello
  type: LoadBalancer
